applications/site-1.kingakati.com/web/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: site-vitrine-site-1-kingakati-com
  name: site-vitrine
  namespace: site-1-kingakati-com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site-vitrine-site-1-kingakati-com
  strategy: {}
  template:
    metadata:
      labels:
        app: site-vitrine-site-1-kingakati-com
    spec:
      containers:
      - image: erickmpene/site-vitrine:dev
        name: site-vitrine-dev
        ports:
        - containerPort: 8080
        resources: {}
status: {}
