applications/site-1.kingakati.com/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-1-kingakati-com
  namespace: site-1-kingakati-com
  labels:
    app: site-vitrine-site-1.kingakati.com
spec:
  selector:
    app: site-vitrine-site-1-kingakati-com
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
