applications/site-1.kingakati.com/web/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-1-kingakati-com-ingress
  namespace: site-1-kingakati-com
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: site-1.kingakati.com-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - PLACEHOLDER
      secretName: PLACEHOLDER
  rules:
    - host: PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: PLACEHOLDER
                port:
                  number: 80
